product_docs/docs/pem/10/pem_rest_api/v1/object.mdx
---
navTitle: Object
pdfExclude: true
title: 'EDB Postgres Enterprise Manager REST APIs v1.0: Object'
description: >-
  Object can be an pem-agent, a monitored server, or a database object (i.e.
  database, schema, table, index, sequence, function, view).

---



Object can be an pem-agent, a monitored server, or a database object (i.e. database, schema, table, index, sequence, function, view).

## `get__agent_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/agent/ \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/agent/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/agent/',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /agent/`

*Retrieve of the pem-agent information*

It returns the list of the information, and status for the pem-agents visible to the user (represented by the token).

<span id="get__agent_-parameters"></span>

### Parameters



| Name         | In     | Type   | Required | Description                      |
| ------------ | ------ | ------ | -------- | -------------------------------- |
| X-Auth-Token | header | string | true     | Token for authentication purpose |

**Example responses**

<Details summary="200 Response">

```json
[
  {
    "id": 0,
    "name": "string",
    "version": "string",
    "active": true,
    "heartbeat_int": 0,
    "alert_blackout": true,
    "owner": "string",
    "team": "string"
  }
]
```

</Details>

<span id="get__agent_-responses"></span>

### Responses



| Status | Meaning                                                 | Description                                                       | Schema                          |
| ------ | ------------------------------------------------------- | ----------------------------------------------------------------- | ------------------------------- |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Returns the list of information, and status about the pem-agents. | [Agent](schemas.mdx#tocs_agent) |

!!! info

    This operation does not require authentication




## `get__agent_{agent_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/agent/{agent_id} \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/agent/{agent_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/agent/{agent_id}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /agent/{agent_id}`

*Retrieve the information for the agent, identified by the agent_id.*

<span id="get__agent_{agent_id}-parameters"></span>

### Parameters



| Name         | In     | Type   | Required | Description            |
| ------------ | ------ | ------ | -------- | ---------------------- |
| agent_id     | path   | string | true     | none                   |
| X-Auth-Token | header | string | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
[
  {
    "id": 0,
    "name": "string",
    "version": "string",
    "active": true,
    "heartbeat_int": 0,
    "alert_blackout": true,
    "owner": "string",
    "team": "string"
  }
]
```

</Details>

<span id="get__agent_{agent_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description         | Schema                          |
| ------ | ------------------------------------------------------- | ------------------- | ------------------------------- |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Successful response | [Agent](schemas.mdx#tocs_agent) |

!!! info

    This operation does not require authentication




## `put__agent_{agent_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X PUT https://PEM-SERVER-IP/pem/api/v1/agent/{agent_id} \
  -H 'Content-Type: application/json' \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Content-Type': 'application/json',
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.put('https://PEM-SERVER-IP/pem/api/v1/agent/{agent_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript
const inputBody = '[
  {
    "id": 0,
    "name": "string",
    "version": "string",
    "active": true,
    "heartbeat_int": 0,
    "alert_blackout": true,
    "owner": "string",
    "team": "string"
  }
]';
const headers = {
  'Content-Type':'application/json',
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/agent/{agent_id}',
{
  method: 'PUT',
  body: inputBody,
  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`PUT /agent/{agent_id}`

*Update the agent information*

**Body parameter**

```json
[
  {
    "id": 0,
    "name": "string",
    "version": "string",
    "active": true,
    "heartbeat_int": 0,
    "alert_blackout": true,
    "owner": "string",
    "team": "string"
  }
]
```

<span id="put__agent_{agent_id}-parameters"></span>

### Parameters



| Name         | In     | Type                            | Required | Description            |
| ------------ | ------ | ------------------------------- | -------- | ---------------------- |
| agent_id     | path   | string                          | true     | none                   |
| X-Auth-Token | header | string                          | true     | Token of authorization |
| body         | body   | [Agent](schemas.mdx#tocs_agent) | true     | none                   |

**Example responses**

<span id="put__agent_{agent_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description           | Schema |
| ------ | ------------------------------------------------------- | --------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Updated successfully. | None   |

<span id="put__agent_{agent_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__server_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/server/ \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/server/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/server/',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/`

*Retrieval of the managed server list*

<span id="get__server_-parameters"></span>

### Parameters



| Name         | In     | Type   | Required | Description            |
| ------------ | ------ | ------ | -------- | ---------------------- |
| X-Auth-Token | header | string | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
[
  {
    "id": 0,
    "name": "string",
    "host": "string",
    "port": 0,
    "database": "string",
    "ssl": 0,
    "serviceid": "string",
    "active": true,
    "alert_blackout": true,
    "owner": 0,
    "team": "string",
    "server_owner": "string",
    "is_remote_monitoring": true,
    "efm_cluster_name": "string",
    "efm_service_name": "string",
    "efm_installation_path": "string",
    "comment": "string",
    "username": "string",
    "gid": 0,
    "db_restriction": "string",
    "role": "string",
    "is_edb": true,
    "agent_id": 0,
    "asb_host": "string",
    "asb_port": 0,
    "asb_username": "string",
    "asb_database": "string",
    "asb_sslmode": "string",
    "asb_password": "string",
    "asb_allowtakeover": "string",
    "agent_capability_list": [
      "string"
    ],
    "agent_description": "string"
  }
]
```

</Details>

<span id="get__server_-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema |
| ------ | ------------------------------------------------------- | ----------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | Inline |

<span id="get__server_-responseschema"></span>

### Response Schema



Status Code **200**

| Name                    | Type                                 | Required | Restrictions | Description                                                                                                                                       |
| ----------------------- | ------------------------------------ | -------- | ------------ | ------------------------------------------------------------------------------------------------------------------------------------------------- |
| *anonymous*             | \[[Server](schemas.mdx#tocs_server)] | false    | none         | none                                                                                                                                              |
| » id                    | integer                              | false    | none         | Server id                                                                                                                                         |
| » name                  | string                               | false    | none         | Server name                                                                                                                                       |
| » host                  | string                               | false    | none         | Server host                                                                                                                                       |
| » port                  | integer                              | false    | none         | Server port                                                                                                                                       |
| » database              | string                               | false    | none         | Maintenance databse                                                                                                                               |
| » ssl                   | integer                              | false    | none         | SSL mode                                                                                                                                          |
| » serviceid             | string                               | false    | none         | Server service id                                                                                                                                 |
| » active                | boolean                              | false    | none         | Defines whether the server is active, or not.                                                                                                     |
| » alert_blackout        | boolean                              | false    | none         | Defines whether the alerts on the server are blacked out, or not.                                                                                 |
| » owner                 | integer                              | false    | none         | ID of the owner, who registered the server with PEM.                                                                                              |
| » team                  | string                               | false    | none         | Defines the role/username, who can see the server information.                                                                                    |
| » server_owner          | string                               | false    | none         | Name of the user, who registered the server on the PEM database server.                                                                           |
| » is_remote_monitoring  | boolean                              | false    | none         | Defines whether this server is being monitored remotely (i.e. the monitoring pemAgent does not resides on the same host on the monitored server). |
| » efm_cluster_name      | string                               | false    | none         | Cluster name of EFM                                                                                                                               |
| » efm_service_name      | string                               | false    | none         | Service name of EFM                                                                                                                               |
| » efm_installation_path | string                               | false    | none         | Installation Path of EFM                                                                                                                          |
| » comment               | string                               | false    | none         | Description about the Server.                                                                                                                     |
| » username              | string                               | false    | none         | Username for connecting the database server.                                                                                                      |
| » gid                   | integer                              | false    | none         | ID of the Server group                                                                                                                            |
| » db_restriction        | string                               | false    | none         | Database restriction SQL clause                                                                                                                   |
| » role                  | string                               | false    | none         | The role the connection will use                                                                                                                  |
| » is_edb                | boolean                              | false    | none         | Is server an EDB Advanced Server?                                                                                                                 |
| » agent_id              | integer                              | false    | none         | Server agent id                                                                                                                                   |
| » asb_host              | string                               | false    | none         | PEM database host used by agent while creating PEM connection.                                                                                    |
| » asb_port              | integer                              | false    | none         | PEM database port used by agent while creating PEM connection.                                                                                    |
| » asb_username          | string                               | false    | none         | PEM database user name used by agent while creating PEM connection.                                                                               |
| » asb_database          | string                               | false    | none         | PEM database to which agent will connect.                                                                                                         |
| » asb_sslmode           | string                               | false    | none         | PEM database ssl mode.                                                                                                                            |
| » asb_password          | string                               | false    | none         | empty string.                                                                                                                                     |
| » asb_allowtakeover     | string                               | false    | none         | Whether server allowed to take over by another agent.                                                                                             |
| » agent_capability_list | [string]                             | false    | none         | Array of capabilities the agent has                                                                                                               |
| » agent_description     | string                               | false    | none         | Agent description                                                                                                                                 |

!!! info

    This operation does not require authentication




## `post__server_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X POST https://PEM-SERVER-IP/pem/api/v1/server/ \
  -H 'Content-Type: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Content-Type': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.post('https://PEM-SERVER-IP/pem/api/v1/server/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript
const inputBody = '{
  "id": 0,
  "name": "string",
  "host": "string",
  "port": 0,
  "database": "string",
  "ssl": 0,
  "serviceid": "string",
  "active": true,
  "alert_blackout": true,
  "owner": 0,
  "team": "string",
  "server_owner": "string",
  "is_remote_monitoring": true,
  "efm_cluster_name": "string",
  "efm_service_name": "string",
  "efm_installation_path": "string",
  "comment": "string",
  "username": "string",
  "gid": 0,
  "db_restriction": "string",
  "role": "string",
  "is_edb": true,
  "agent_id": 0,
  "asb_host": "string",
  "asb_port": 0,
  "asb_username": "string",
  "asb_database": "string",
  "asb_sslmode": "string",
  "asb_password": "string",
  "asb_allowtakeover": "string",
  "agent_capability_list": [
    "string"
  ],
  "agent_description": "string"
}';
const headers = {
  'Content-Type':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/server/',
{
  method: 'POST',
  body: inputBody,
  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`POST /server/`

*Add a new managed database server.*

**Body parameter**

```json
{
  "id": 0,
  "name": "string",
  "host": "string",
  "port": 0,
  "database": "string",
  "ssl": 0,
  "serviceid": "string",
  "active": true,
  "alert_blackout": true,
  "owner": 0,
  "team": "string",
  "server_owner": "string",
  "is_remote_monitoring": true,
  "efm_cluster_name": "string",
  "efm_service_name": "string",
  "efm_installation_path": "string",
  "comment": "string",
  "username": "string",
  "gid": 0,
  "db_restriction": "string",
  "role": "string",
  "is_edb": true,
  "agent_id": 0,
  "asb_host": "string",
  "asb_port": 0,
  "asb_username": "string",
  "asb_database": "string",
  "asb_sslmode": "string",
  "asb_password": "string",
  "asb_allowtakeover": "string",
  "agent_capability_list": [
    "string"
  ],
  "agent_description": "string"
}
```

<span id="post__server_-parameters"></span>

### Parameters



| Name         | In     | Type                              | Required | Description            |
| ------------ | ------ | --------------------------------- | -------- | ---------------------- |
| X-Auth-Token | header | string                            | true     | Token of authorization |
| body         | body   | [Server](schemas.mdx#tocs_server) | true     | none                   |

**Example responses**

<span id="post__server_-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema |
| ------ | ------------------------------------------------------- | ----------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | None   |

<span id="post__server_-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__server_{server_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/server/{server_id} \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/server/{server_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/server/{server_id}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/{server_id}`

*Retrieve the information for the server, identified by the server_id.*

<span id="get__server_{server_id}-parameters"></span>

### Parameters



| Name         | In     | Type   | Required | Description            |
| ------------ | ------ | ------ | -------- | ---------------------- |
| server_id    | path   | string | true     | none                   |
| X-Auth-Token | header | string | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
{
  "id": 0,
  "name": "string",
  "host": "string",
  "port": 0,
  "database": "string",
  "ssl": 0,
  "serviceid": "string",
  "active": true,
  "alert_blackout": true,
  "owner": 0,
  "team": "string",
  "server_owner": "string",
  "is_remote_monitoring": true,
  "efm_cluster_name": "string",
  "efm_service_name": "string",
  "efm_installation_path": "string",
  "comment": "string",
  "username": "string",
  "gid": 0,
  "db_restriction": "string",
  "role": "string",
  "is_edb": true,
  "agent_id": 0,
  "asb_host": "string",
  "asb_port": 0,
  "asb_username": "string",
  "asb_database": "string",
  "asb_sslmode": "string",
  "asb_password": "string",
  "asb_allowtakeover": "string",
  "agent_capability_list": [
    "string"
  ],
  "agent_description": "string"
}
```

</Details>

<span id="get__server_{server_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description          | Schema                            |
| ------ | ------------------------------------------------------- | -------------------- | --------------------------------- |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Created successfully | [Server](schemas.mdx#tocs_server) |

!!! info

    This operation does not require authentication




## `put__server_{server_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X PUT https://PEM-SERVER-IP/pem/api/v1/server/{server_id} \
  -H 'Content-Type: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Content-Type': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.put('https://PEM-SERVER-IP/pem/api/v1/server/{server_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript
const inputBody = '{
  "id": 0,
  "name": "string",
  "host": "string",
  "port": 0,
  "database": "string",
  "ssl": 0,
  "serviceid": "string",
  "active": true,
  "alert_blackout": true,
  "owner": 0,
  "team": "string",
  "server_owner": "string",
  "is_remote_monitoring": true,
  "efm_cluster_name": "string",
  "efm_service_name": "string",
  "efm_installation_path": "string",
  "comment": "string",
  "username": "string",
  "gid": 0,
  "db_restriction": "string",
  "role": "string",
  "is_edb": true,
  "agent_id": 0,
  "asb_host": "string",
  "asb_port": 0,
  "asb_username": "string",
  "asb_database": "string",
  "asb_sslmode": "string",
  "asb_password": "string",
  "asb_allowtakeover": "string",
  "agent_capability_list": [
    "string"
  ],
  "agent_description": "string"
}';
const headers = {
  'Content-Type':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/server/{server_id}',
{
  method: 'PUT',
  body: inputBody,
  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`PUT /server/{server_id}`

*Update the server information*

**Body parameter**

```json
{
  "id": 0,
  "name": "string",
  "host": "string",
  "port": 0,
  "database": "string",
  "ssl": 0,
  "serviceid": "string",
  "active": true,
  "alert_blackout": true,
  "owner": 0,
  "team": "string",
  "server_owner": "string",
  "is_remote_monitoring": true,
  "efm_cluster_name": "string",
  "efm_service_name": "string",
  "efm_installation_path": "string",
  "comment": "string",
  "username": "string",
  "gid": 0,
  "db_restriction": "string",
  "role": "string",
  "is_edb": true,
  "agent_id": 0,
  "asb_host": "string",
  "asb_port": 0,
  "asb_username": "string",
  "asb_database": "string",
  "asb_sslmode": "string",
  "asb_password": "string",
  "asb_allowtakeover": "string",
  "agent_capability_list": [
    "string"
  ],
  "agent_description": "string"
}
```

<span id="put__server_{server_id}-parameters"></span>

### Parameters



| Name         | In     | Type                              | Required | Description            |
| ------------ | ------ | --------------------------------- | -------- | ---------------------- |
| server_id    | path   | string                            | true     | none                   |
| X-Auth-Token | header | string                            | true     | Token of authorization |
| body         | body   | [Server](schemas.mdx#tocs_server) | true     | none                   |

**Example responses**

<span id="put__server_{server_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description           | Schema |
| ------ | ------------------------------------------------------- | --------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Updated successfully. | None   |

<span id="put__server_{server_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `delete__server_{server_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X DELETE https://PEM-SERVER-IP/pem/api/v1/server/{server_id} \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'X-Auth-Token': 'string'
}

r = requests.delete('https://PEM-SERVER-IP/pem/api/v1/server/{server_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/server/{server_id}',
{
  method: 'DELETE',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`DELETE /server/{server_id}`

*Stop mananging the server by PEM.*

<span id="delete__server_{server_id}-parameters"></span>

### Parameters



| Name         | In     | Type   | Required | Description            |
| ------------ | ------ | ------ | -------- | ---------------------- |
| server_id    | path   | string | true     | none                   |
| X-Auth-Token | header | string | true     | Token of authorization |

**Example responses**

<span id="delete__server_{server_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema |
| ------ | ------------------------------------------------------- | ----------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | None   |

<span id="delete__server_{server_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__server_&lt;sid&gt;_database_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/ \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/&lt;sid&gt;/database/`

*Retrieve the list of properties of database(s) for a managed server.*

<span id="get__server_<sid>_database_-parameters"></span>

### Parameters



| Name         | In     | Type   | Required | Description            |
| ------------ | ------ | ------ | -------- | ---------------------- |
| X-Auth-Token | header | string | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
[
  {
    "database_name": "string",
    "connections_allowed": true,
    "system_database": true,
    "recorded_time": "2019-08-24T14:15:22Z",
    "encoding": "string",
    "server_id": 0
  }
]
```

</Details>

<span id="get__server_<sid>_database_-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema |
| ------ | ------------------------------------------------------- | ----------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | Inline |

<span id="get__server_<sid>_database_-responseschema"></span>

### Response Schema



Status Code **200**

| Name                  | Type                                     | Required | Restrictions | Description                                   |
| --------------------- | ---------------------------------------- | -------- | ------------ | --------------------------------------------- |
| *anonymous*           | \[[Database](schemas.mdx#tocs_database)] | false    | none         | none                                          |
| » database_name       | string                                   | false    | none         | Database name                                 |
| » connections_allowed | boolean                                  | false    | none         | Is connection to database allowed             |
| » system_database     | boolean                                  | false    | none         | Is database system database                   |
| » recorded_time       | string(date-time)                        | false    | none         | When database was first detected by PEM agent |
| » encoding            | string                                   | false    | none         | Database encoding                             |
| » server_id           | integer                                  | false    | none         | Server id of database                         |

!!! info

    This operation does not require authentication




## `get__server_&lt;sid&gt;_database_{db_name}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/{db_name} \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/{db_name}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/{db_name}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/&lt;sid&gt;/database/{db_name}`

*Retrieve the properties of the particular database of a managed server.*

<span id="get__server_<sid>_database_{db_name}-parameters"></span>

### Parameters



| Name         | In     | Type   | Required | Description            |
| ------------ | ------ | ------ | -------- | ---------------------- |
| db_name      | path   | string | true     | none                   |
| X-Auth-Token | header | string | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
{
  "database_name": "string",
  "connections_allowed": true,
  "system_database": true,
  "recorded_time": "2019-08-24T14:15:22Z",
  "encoding": "string",
  "server_id": 0
}
```

</Details>

<span id="get__server_<sid>_database_{db_name}-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema                                |
| ------ | ------------------------------------------------------- | ----------- | ------------------------------------- |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | [Database](schemas.mdx#tocs_database) |

!!! info

    This operation does not require authentication




## `get__server_&lt;sid&gt;_database_&lt;db_name&gt;_schema_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/ \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/`

*Retrieve the list of properties of schema(s) for the particular database of a managed server.*

<span id="get__server_<sid>_database_<db_name>_schema_-parameters"></span>

### Parameters



| Name         | In     | Type   | Required | Description            |
| ------------ | ------ | ------ | -------- | ---------------------- |
| X-Auth-Token | header | string | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
[
  {
    "schema_name": "string",
    "database_name": "string",
    "server_id": 0,
    "recorded_time": "2019-08-24T14:15:22Z"
  }
]
```

</Details>

<span id="get__server_<sid>_database_<db_name>_schema_-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema |
| ------ | ------------------------------------------------------- | ----------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | Inline |

<span id="get__server_<sid>_database_<db_name>_schema_-responseschema"></span>

### Response Schema



Status Code **200**

| Name            | Type                                 | Required | Restrictions | Description                                 |
| --------------- | ------------------------------------ | -------- | ------------ | ------------------------------------------- |
| *anonymous*     | \[[Schema](schemas.mdx#tocs_schema)] | false    | none         | none                                        |
| » schema_name   | string                               | false    | none         | Schema name                                 |
| » database_name | string                               | false    | none         | Database name of schema                     |
| » server_id     | integer                              | false    | none         | Server id schmea                            |
| » recorded_time | string(date-time)                    | false    | none         | When schema was first detected by PEM agent |

!!! info

    This operation does not require authentication




## `get__server_&lt;sid&gt;_database_&lt;db_name&gt;_schema_&lt;schema_name&gt;`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt; \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;`

*Retrieve the properties of schema(s) for the particular database of a managed server.*

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>-parameters"></span>

### Parameters



| Name         | In     | Type   | Required | Description            |
| ------------ | ------ | ------ | -------- | ---------------------- |
| schema_name  | path   | string | true     | none                   |
| X-Auth-Token | header | string | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
{
  "schema_name": "string",
  "database_name": "string",
  "server_id": 0,
  "recorded_time": "2019-08-24T14:15:22Z"
}
```

</Details>

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema                            |
| ------ | ------------------------------------------------------- | ----------- | --------------------------------- |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | [Schema](schemas.mdx#tocs_schema) |

!!! info

    This operation does not require authentication




## `get__server_&lt;sid&gt;_database_&lt;db_name&gt;_schema_&lt;schema_name&gt;_table_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/table/ \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/table/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/table/',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/table/`

*Retrieve the list of properties of tables resides under a schema for the particular database of a managed server.*

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_table_-parameters"></span>

### Parameters



| Name         | In     | Type   | Required | Description            |
| ------------ | ------ | ------ | -------- | ---------------------- |
| X-Auth-Token | header | string | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
[
  {
    "table_name": "string",
    "schema_name": "string",
    "database_name": "string",
    "server_id": 0,
    "has_primary_key": true,
    "recorded_time": "string"
  }
]
```

</Details>

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_table_-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema |
| ------ | ------------------------------------------------------- | ----------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | Inline |

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_table_-responseschema"></span>

### Response Schema



Status Code **200**

| Name              | Type                               | Required | Restrictions | Description                                |
| ----------------- | ---------------------------------- | -------- | ------------ | ------------------------------------------ |
| *anonymous*       | \[[Table](schemas.mdx#tocs_table)] | false    | none         | none                                       |
| » table_name      | string                             | false    | none         | Table name                                 |
| » schema_name     | string                             | false    | none         | schema name                                |
| » database_name   | string                             | false    | none         | Database name                              |
| » server_id       | integer                            | false    | none         | Server id                                  |
| » has_primary_key | boolean                            | false    | none         | Weather table has primary key              |
| » recorded_time   | string                             | false    | none         | When table was first detected by PEM agent |

!!! info

    This operation does not require authentication




## `get__server_&lt;sid&gt;_database_&lt;db_name&gt;_schema_&lt;schema_name&gt;_table_{table_name}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/table/{table_name} \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/table/{table_name}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/table/{table_name}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/table/{table_name}`

*Retrieve the properties of tables resides under a schema for the particular database of a managed server.*

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_table_{table_name}-parameters"></span>

### Parameters



| Name         | In     | Type   | Required | Description            |
| ------------ | ------ | ------ | -------- | ---------------------- |
| table_name   | path   | string | true     | none                   |
| X-Auth-Token | header | string | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
{
  "table_name": "string",
  "schema_name": "string",
  "database_name": "string",
  "server_id": 0,
  "has_primary_key": true,
  "recorded_time": "string"
}
```

</Details>

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_table_{table_name}-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema                          |
| ------ | ------------------------------------------------------- | ----------- | ------------------------------- |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | [Table](schemas.mdx#tocs_table) |

!!! info

    This operation does not require authentication




## `get__server_&lt;sid&gt;_database_&lt;db_name&gt;_schema_&lt;schema_name&gt;_index_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/index/ \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/index/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/index/',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/index/`

*Retrieve the list of properties of indexes resides under a schema for the particular database of a managed server.*

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_index_-parameters"></span>

### Parameters



| Name         | In     | Type   | Required | Description            |
| ------------ | ------ | ------ | -------- | ---------------------- |
| X-Auth-Token | header | string | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
[
  {
    "index_name": "string",
    "ind_keys": [
      0
    ],
    "table_name": "string",
    "schema_name": "string",
    "database_name": "string",
    "server_id": 0,
    "recorded_time": "string"
  }
]
```

</Details>

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_index_-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema |
| ------ | ------------------------------------------------------- | ----------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | Inline |

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_index_-responseschema"></span>

### Response Schema



Status Code **200**

| Name            | Type                               | Required | Restrictions | Description                                |
| --------------- | ---------------------------------- | -------- | ------------ | ------------------------------------------ |
| *anonymous*     | \[[Index](schemas.mdx#tocs_index)] | false    | none         | none                                       |
| » index_name    | string                             | false    | none         | Index name                                 |
| » ind_keys      | [integer]                          | false    | none         | indexed column positions in table          |
| » table_name    | string                             | false    | none         | Table name                                 |
| » schema_name   | string                             | false    | none         | Schema                                     |
| » database_name | string                             | false    | none         | Database name                              |
| » server_id     | integer                            | false    | none         | Server id                                  |
| » recorded_time | string                             | false    | none         | When index was first detected by PEM agent |

!!! info

    This operation does not require authentication




## `get__server_&lt;sid&gt;_database_&lt;db_name&gt;_schema_&lt;schema_name&gt;_index_&lt;index_name&gt;`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/index/&lt;index_name&gt; \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/index/&lt;index_name&gt;', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/index/&lt;index_name&gt;',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/index/&lt;index_name&gt;`

*Retrieve the properties of indexes resides under a schema for the particular database of a managed server.*

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_index_<index_name>-parameters"></span>

### Parameters



| Name         | In     | Type   | Required | Description            |
| ------------ | ------ | ------ | -------- | ---------------------- |
| index_name   | path   | string | true     | none                   |
| X-Auth-Token | header | string | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
{
  "index_name": "string",
  "ind_keys": [
    0
  ],
  "table_name": "string",
  "schema_name": "string",
  "database_name": "string",
  "server_id": 0,
  "recorded_time": "string"
}
```

</Details>

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_index_<index_name>-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema                          |
| ------ | ------------------------------------------------------- | ----------- | ------------------------------- |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | [Index](schemas.mdx#tocs_index) |

!!! info

    This operation does not require authentication




## `get__server_&lt;sid&gt;_database_&lt;db_name&gt;_schema_&lt;schema_name&gt;_sequence_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/sequence/ \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/sequence/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/sequence/',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/sequence/`

*Retrieve the list of properties of sequences resides under a schema for the particular database of a managed server.*

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_sequence_-parameters"></span>

### Parameters



| Name         | In     | Type   | Required | Description            |
| ------------ | ------ | ------ | -------- | ---------------------- |
| X-Auth-Token | header | string | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
[
  {
    "sequence_name": "string",
    "schema_name": "string",
    "database_name": "string",
    "server_id": 0,
    "recorded_time": "2019-08-24T14:15:22Z"
  }
]
```

</Details>

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_sequence_-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema |
| ------ | ------------------------------------------------------- | ----------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | Inline |

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_sequence_-responseschema"></span>

### Response Schema



Status Code **200**

| Name            | Type                                     | Required | Restrictions | Description                                   |
| --------------- | ---------------------------------------- | -------- | ------------ | --------------------------------------------- |
| *anonymous*     | \[[Sequence](schemas.mdx#tocs_sequence)] | false    | none         | none                                          |
| » sequence_name | string                                   | false    | none         | Sequence name                                 |
| » schema_name   | string                                   | false    | none         | Schema name                                   |
| » database_name | string                                   | false    | none         | Database name                                 |
| » server_id     | integer                                  | false    | none         | Server id                                     |
| » recorded_time | string(date-time)                        | false    | none         | When sequence was first detected by PEM agent |

!!! info

    This operation does not require authentication




## `get__server_&lt;sid&gt;_database_&lt;db_name&gt;_schema_&lt;schema_name&gt;_sequence_&lt;sequence_name&gt;`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/sequence/&lt;sequence_name&gt; \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/sequence/&lt;sequence_name&gt;', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/sequence/&lt;sequence_name&gt;',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/sequence/&lt;sequence_name&gt;`

*Retrieve the properties of sequences resides under a schema for the particular database of a managed server.*

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_sequence_<sequence_name>-parameters"></span>

### Parameters



| Name          | In     | Type   | Required | Description            |
| ------------- | ------ | ------ | -------- | ---------------------- |
| sequence_name | path   | string | true     | none                   |
| X-Auth-Token  | header | string | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
{
  "sequence_name": "string",
  "schema_name": "string",
  "database_name": "string",
  "server_id": 0,
  "recorded_time": "2019-08-24T14:15:22Z"
}
```

</Details>

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_sequence_<sequence_name>-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema                                |
| ------ | ------------------------------------------------------- | ----------- | ------------------------------------- |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | [Sequence](schemas.mdx#tocs_sequence) |

!!! info

    This operation does not require authentication




## `get__server_&lt;sid&gt;_database_&lt;db_name&gt;_schema_&lt;schema_name&gt;_view_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/view/ \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/view/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/view/',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/view/`

*Retrieve the list of properties of views resides under a schema for the particular database of a managed server.*

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_view_-parameters"></span>

### Parameters



| Name         | In     | Type   | Required | Description            |
| ------------ | ------ | ------ | -------- | ---------------------- |
| X-Auth-Token | header | string | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
[
  {
    "view_name": "string",
    "view_type": "string",
    "ispopulated": true,
    "view_owner": "string",
    "definition": "string",
    "tablespace_name": "string",
    "schema_name": "string",
    "database_name": "string",
    "server_id": 0,
    "recorded_time": "string"
  }
]
```

</Details>

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_view_-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema |
| ------ | ------------------------------------------------------- | ----------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | Inline |

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_view_-responseschema"></span>

### Response Schema



Status Code **200**

| Name              | Type                             | Required | Restrictions | Description                               |
| ----------------- | -------------------------------- | -------- | ------------ | ----------------------------------------- |
| *anonymous*       | \[[View](schemas.mdx#tocs_view)] | false    | none         | none                                      |
| » view_name       | string                           | false    | none         | View name                                 |
| » view_type       | string                           | false    | none         | View type                                 |
| » ispopulated     | boolean                          | false    | none         | Is view populated                         |
| » view_owner      | string                           | false    | none         | View owner                                |
| » definition      | string                           | false    | none         | View definition                           |
| » tablespace_name | string                           | false    | none         | View tablespace                           |
| » schema_name     | string                           | false    | none         | View schema                               |
| » database_name   | string                           | false    | none         | View database                             |
| » server_id       | integer                          | false    | none         | View server id                            |
| » recorded_time   | string                           | false    | none         | When view was first detected by PEM agent |

!!! info

    This operation does not require authentication




## `get__server_&lt;sid&gt;_database_&lt;db_name&gt;_schema_&lt;schema_name&gt;_view_&lt;view_name&gt;`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/view/&lt;view_name&gt; \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/view/&lt;view_name&gt;', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/view/&lt;view_name&gt;',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/view/&lt;view_name&gt;`

*Retrieve the properties of views resides under a schema for the particular database of a managed server.*

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_view_<view_name>-parameters"></span>

### Parameters



| Name         | In     | Type   | Required | Description            |
| ------------ | ------ | ------ | -------- | ---------------------- |
| view_name    | path   | string | true     | none                   |
| X-Auth-Token | header | string | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
{
  "view_name": "string",
  "view_type": "string",
  "ispopulated": true,
  "view_owner": "string",
  "definition": "string",
  "tablespace_name": "string",
  "schema_name": "string",
  "database_name": "string",
  "server_id": 0,
  "recorded_time": "string"
}
```

</Details>

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_view_<view_name>-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema                        |
| ------ | ------------------------------------------------------- | ----------- | ----------------------------- |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | [View](schemas.mdx#tocs_view) |

!!! info

    This operation does not require authentication




## `get__server_&lt;sid&gt;_database_&lt;db_name&gt;_schema_&lt;schema_name&gt;_function_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/function/ \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/function/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/function/',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/function/`

*Retrieve the list of properties of functions resides under a schema for the particular database of a managed server.*

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_function_-parameters"></span>

### Parameters



| Name         | In     | Type   | Required | Description            |
| ------------ | ------ | ------ | -------- | ---------------------- |
| X-Auth-Token | header | string | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
[
  {
    "function_name": "string",
    "function_type": "string",
    "return_type": "string",
    "arg_types": [
      "string"
    ],
    "function_binary": "string",
    "extension_name": "string",
    "package_name": "string",
    "schema_name": "string",
    "database_name": "string",
    "server_id": 0,
    "recorded_time": "2019-08-24T14:15:22Z"
  }
]
```

</Details>

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_function_-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema |
| ------ | ------------------------------------------------------- | ----------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | Inline |

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_function_-responseschema"></span>

### Response Schema



Status Code **200**

| Name              | Type                                     | Required | Restrictions | Description                                   |
| ----------------- | ---------------------------------------- | -------- | ------------ | --------------------------------------------- |
| *anonymous*       | \[[Function](schemas.mdx#tocs_function)] | false    | none         | none                                          |
| » function_name   | string                                   | false    | none         | Function name                                 |
| » function_type   | string                                   | false    | none         | Function type                                 |
| » return_type     | string                                   | false    | none         | Function return type                          |
| » arg_types       | [string]                                 | false    | none         | Function argument types                       |
| » function_binary | string                                   | false    | none         | none                                          |
| » extension_name  | string                                   | false    | none         | none                                          |
| » package_name    | string                                   | false    | none         | Function package name                         |
| » schema_name     | string                                   | false    | none         | Function schema                               |
| » database_name   | string                                   | false    | none         | Function database name                        |
| » server_id       | integer                                  | false    | none         | Function server id                            |
| » recorded_time   | string(date-time)                        | false    | none         | When function was first detected by PEM agent |

!!! info

    This operation does not require authentication




## `get__server_&lt;sid&gt;_database_&lt;db_name&gt;_schema_&lt;schema_name&gt;_function_&lt;function_name&gt;`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/function/&lt;function_name&gt; \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/function/&lt;function_name&gt;', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v1/server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/function/&lt;function_name&gt;',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/&lt;sid&gt;/database/&lt;db_name&gt;/schema/&lt;schema_name&gt;/function/&lt;function_name&gt;`

*Retrieve the properties of function resides under a schema for the particular database of a managed server.*

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_function_<function_name>-parameters"></span>

### Parameters



| Name          | In     | Type   | Required | Description            |
| ------------- | ------ | ------ | -------- | ---------------------- |
| function_name | path   | string | true     | none                   |
| X-Auth-Token  | header | string | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
{
  "function_name": "string",
  "function_type": "string",
  "return_type": "string",
  "arg_types": [
    "string"
  ],
  "function_binary": "string",
  "extension_name": "string",
  "package_name": "string",
  "schema_name": "string",
  "database_name": "string",
  "server_id": 0,
  "recorded_time": "2019-08-24T14:15:22Z"
}
```

</Details>

<span id="get__server_<sid>_database_<db_name>_schema_<schema_name>_function_<function_name>-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema                                |
| ------ | ------------------------------------------------------- | ----------- | ------------------------------------- |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | [Function](schemas.mdx#tocs_function) |

!!! info

    This operation does not require authentication




<span id="edb-postgres-enterprise-manager-rest-apis-alerts"></span>
